Fix blue scrollbars on Firefox

--- a/addons/dark-www/darker_banners.css
+++ b/addons/dark-www/darker_banners.css
@@ -29,8 +29,6 @@
 .gradient1 {
   background-image: linear-gradient(#004099, black);
 }
-html,
-body,
 .parents .title-banner.masthead,
 .information-page .title-banner.masthead,
 .download .title-banner.masthead /* Scratch 2.0 and 1.4 download */,
